# CS-302

./: CMakeLists.txt  Makefile  README.md  hellofunc.c  hellomake.c  hellomake.h
_makeProj/include/: hellomake.h
_makeProj/src/: Makefile  Makefile1  hellofunc.c  hellomake  hellomake.c
_testCMake/: CMakeCache.txt  CMakeLists.txt  Makefile  _testCMake  cmake_install.cmake  main.cpp
_testCMake2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  function1.cpp  functions2.cpp  main.cpp
